--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Monitor</string>
+    <string name="app_name_monitor">Monitor</string>
     <string name="title_activity_login">登陆</string>
     <string name="title_activity_register">注册</string>
     <string name="title_activity_main">Monitor</string>
