--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name_monitor">Monitor</string>
+    <string name="app_name_monitor">泰达时尚家园</string>
     <string name="title_activity_login">登陆</string>
     <string name="title_activity_register">注册</string>
     <string name="title_activity_main">Monitor</string>
@@ -11,10 +11,14 @@
     <!-- Strings related to login -->
     <string name="text_phoneNumber">手机号</string>
     <string name="text_password">密码</string>
+    <string name="text_verificationCode">验证码</string>
+    <string name="text_findPwd">验证码</string>
+    <string name="text_getVerificationCode">获取验证码</string>
     <string name="text_login">登陆</string>
-    <string name="text_register">注册</string>
+    <string name="text_register">注册账号</string>
     <string name="error_invalid_phoneNumber">手机号码格式不正确</string>
     <string name="error_invalid_password">密码太短，不能低于6位</string>
+    <string name="error_invalid_verficationCode">验证码不能为空</string>
     <string name="error_incorrect_password">手机号或密码错误</string>
     <string name="error_field_required">手机号未填写</string>
 </resources>
