--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name_monitor">泰达时尚家园</string>
+    <string name="title_activity_launch">泰达时尚家园</string>
     <string name="title_activity_login">登陆</string>
     <string name="title_activity_register">注册</string>
     <string name="title_activity_main">泰达时尚家园</string>
@@ -15,6 +16,8 @@
     <string name="text_verificationCode">验证码</string>
     <string name="text_find_password">找回密码</string>
     <string name="text_getVerificationCode">获取验证码</string>
+    <string name="text_getVerificationCode_success">短信验证码发送成功</string>
+    <string name="text_getVerificationCode_used">手机号已被使用</string>
     <string name="text_login">登陆</string>
     <string name="text_register">注册账号</string>
     <string name="error_invalid_phoneNumber">请输入正确手机号</string>
@@ -22,7 +25,7 @@
     <string name="error_invalid_verficationCode">验证码不能为空</string>
     <string name="error_incorrect_password">手机号或密码错误</string>
     <string name="error_field_required">手机号未填写</string>
-    <string name="error_field_login">登陆失败</string>
+    <string name="error_field_login">登陆失败，手机号或密码错误</string>
     <string name="error_field_register">注册失败</string>
     <string name="text_about">关于</string>
     <string name="text_exit">退出</string>
