--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="text_getVerificationCode_success">短信验证码发送成功</string>
     <string name="text_getVerificationCode_used">手机号已被使用</string>
     <string name="text_login">登陆</string>
+    <string name="text_login_other_method">其他方式登陆</string>
     <string name="text_register">注册账号</string>
     <string name="error_invalid_phoneNumber">请输入正确手机号</string>
     <string name="error_invalid_password">密码太短，不能低于6位</string>
