--- a/com.yoosee/res/values-es-rES/strings.xml
+++ b/com.yoosee/res/values-es-rES/strings.xml
@@ -46,7 +46,7 @@
     <string name="allarm_type3">alarma de emergencia</string>
     <string name="Allarm_vibrate">alarma vibratoria</string>
     <string name="already_init_passwd">falló en añadir, clave ha existido</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">confirmar eliminación</string>
     <string name="area">área de defensa</string>
     <string name="audio_video_control">ajustes de media</string>
