--- a/com.yoosee/res/values-fr-rFR/strings.xml
+++ b/com.yoosee/res/values-fr-rFR/strings.xml
@@ -46,7 +46,7 @@
     <string name="allarm_type3">alarme d\'urgence </string>
     <string name="Allarm_vibrate">vibration d\'alarme </string>
     <string name="already_init_passwd">ajouter sans succès,mot de passe existe déjà </string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">confirmer à effacer </string>
     <string name="area">zone de défense </string>
     <string name="audio_video_control">réglage de média </string>
