--- a/com.yoosee/res/values-ko-rKR/strings.xml
+++ b/com.yoosee/res/values-ko-rKR/strings.xml
@@ -46,7 +46,7 @@
     <string name="allarm_type3">긴급 알람</string>
     <string name="Allarm_vibrate">알람 진동</string>
     <string name="already_init_passwd">추가 실패, 비밀번호가 이미 존재합니다.</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">삭제 확인</string>
     <string name="area">보안 구역</string>
     <string name="audio_video_control">미디어 설정</string>
