--- a/com.yoosee/res/values-ru-rRU/strings.xml
+++ b/com.yoosee/res/values-ru-rRU/strings.xml
@@ -46,7 +46,7 @@
     <string name="allarm_type3">Экстренная тревога</string>
     <string name="Allarm_vibrate">Вибрация при тревоге</string>
     <string name="already_init_passwd">Введенный пароль уже существует</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">Подтвердите удаление</string>
     <string name="area">Зона</string>
     <string name="audio_video_control">Настройки медиа</string>
