--- a/com.yoosee/res/values-zh-rHK/strings.xml
+++ b/com.yoosee/res/values-zh-rHK/strings.xml
@@ -30,7 +30,7 @@
     <string name="allarm_type3">緊急報警</string>
     <string name="Allarm_vibrate">報警振動</string>
     <string name="already_init_passwd">添加失敗，密碼已經存在</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">確定刪除</string>
     <string name="area">防區</string>
     <string name="audio_video_control">媒體設置</string>
