--- a/com.yoosee/res/values/strings.xml
+++ b/com.yoosee/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="allarm_type3">Emergency alarm</string>
     <string name="Allarm_vibrate">Alarm Vibrate</string>
     <string name="already_init_passwd">Add Failed,the password already existed</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">Confirm to delete</string>
     <string name="area">Defence Area</string>
     <string name="audio_video_control">Media Settings</string>
