--- a/com.yoosee/res/values-zh-rCN/strings.xml
+++ b/com.yoosee/res/values-zh-rCN/strings.xml
@@ -30,7 +30,7 @@
     <string name="allarm_type3">紧急报警</string>
     <string name="Allarm_vibrate">报警振动</string>
     <string name="already_init_passwd">添加失败，密码已经存在</string>
-    <string name="app_name">Yoosee</string>
+    <string name="app_name">泰达时尚家园</string>
     <string name="are_you_sure_delete">确定删除</string>
     <string name="area">防区</string>
     <string name="audio_video_control">媒体设置</string>
